2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/figures/battstat-preferences.png:
	* docs/battstat.xml: Update documentation for GNOME 2.10.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c: Don't leak style while handling the
	change_background signal.  Fix adapted from Vincent Untz's fixes
	to various panel applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* battstat_applet.c: (static_global_initialisation),
	(static_global_teardown): Make some functions static
	and ANSIfy the functions taking no arg.
	* pixmaps.h: Make pixmap static.
	* power-management.c: Make some global vars static

2005-01-14  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: Make dialogs appear always on top but not
	stealing focus.

2005-01-13  Ryan Lortie  <desrt@desrt.ca>
	* acpi_linux.c:	
		Remove an unused local variable.
	* battstat.h:
		Remove data/decl's that ought to be static.
		Remove unused members from ProgressData.  Add comments.
		Namespace clean-up of some enum types.
		Remove function prototypes for long-since removed code.
	* battstat_applet.c:
		Add lots of code comments to improve readability.
		Move in some static data/decl's from battstat.h.
		Change global_initialisation to keep track of how many
			applets instances are running.
		Add global_teardown function to do cleanup when last
			applet instance is removed from the panel.
		battstat_error_dialog no longer blocks.
		STRING CHANGE: Fixed "%d hours (%d%%) until charged (%d%%)".
		update_battery_image now takes the battery life % as an int.
		Moved GdkGC initialisation into update_battery_image.
		Cleaned up update_status_icon for readability.
		Don't ignore return values of power_management functions.
		Only beep if also displaying an error dialog.
		Improved change-detection for fewer superfluous updates.
		destroy_applet: Removing applets should be leak-free now.
		Removed unused and empty helppref_cb function.