@@ -1,3 +1,10 @@
+2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* battstat.h:
+	* battstat_applet.c:
+	* power-management.c:
+	* properties.c: Clean up a bit
+
 2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
 
 	* docs/C/figures/battstat-preferences.png:
